--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="utf-8">
     <title>Whack A Mole</title>
     <style media="screen">
+      div {
+        height: 900px;
+        width: 900px;
+        border: 10px solid red;
+        margin: 0 auto;
+        background-color:green;
+      }
+
+      .hole {
+        width: 284px;
+        height: 284px;
+        margin: 4px;
+        border: 4px solid #342405;
+        float: left;
+        border-radius: 50%;
+        background-color: #694605;
+      }
       
     </style>
 
