--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
         border-radius: 50%;
         background-color: #694605;
       }
-      
+      img {
+        margin-left: 30px;
+        margin-top: 50px;
+        height: 60%;
+      }
     </style>
 
 
@@ -41,6 +45,14 @@
     </div>
   </body>
   <script>
+  var firstHole = document.querySelector('.hole');
+
+    firstHole.addEventListener('click', function() {
+      console.log(this);
+      console.log(this === firstHole);
+      this.innerHTML = '<img src="mole.png">'
+    })
+
 
   </script>
 </html>
